cfn_benchmark/cfn_templates/iksena__llm-iac-data-analysis/cfn_benchmark/cfn_templates/Tianyi2__IRIS/data__cloudformation_collected_templates_new__template_10199_513232148.yaml
Description: Lighthouse Server Stack
Resources:
  geocloudlighthouseservervpc47BD1A05:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/Resource
  geocloudlighthouseservervpcingressSubnet1SubnetFB9487B3:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/Subnet
  geocloudlighthouseservervpcingressSubnet1RouteTable7151B1AF:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/RouteTable
  geocloudlighthouseservervpcingressSubnet1RouteTableAssociation62BBC816:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpcingressSubnet1RouteTable7151B1AF
      SubnetId:
        Ref: geocloudlighthouseservervpcingressSubnet1SubnetFB9487B3
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/RouteTableAssociation
  geocloudlighthouseservervpcingressSubnet1DefaultRoute24130F46:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpcingressSubnet1RouteTable7151B1AF
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: geocloudlighthouseservervpcIGW79583064
    DependsOn:
      - geocloudlighthouseservervpcVPCGWD00F7907
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/DefaultRoute
  geocloudlighthouseservervpcingressSubnet1EIP6F924C9C:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/EIP
  geocloudlighthouseservervpcingressSubnet1NATGatewayAF099418:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: geocloudlighthouseservervpcingressSubnet1SubnetFB9487B3
      AllocationId:
        Fn::GetAtt:
          - geocloudlighthouseservervpcingressSubnet1EIP6F924C9C
          - AllocationId
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet1/NATGateway
  geocloudlighthouseservervpcingressSubnet2Subnet681FDBB8:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: ingress
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/Subnet
  geocloudlighthouseservervpcingressSubnet2RouteTableFE30794B:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/RouteTable
  geocloudlighthouseservervpcingressSubnet2RouteTableAssociation700BB7BD:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpcingressSubnet2RouteTableFE30794B
      SubnetId:
        Ref: geocloudlighthouseservervpcingressSubnet2Subnet681FDBB8
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/RouteTableAssociation
  geocloudlighthouseservervpcingressSubnet2DefaultRoute826B043F:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpcingressSubnet2RouteTableFE30794B
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: geocloudlighthouseservervpcIGW79583064
    DependsOn:
      - geocloudlighthouseservervpcVPCGWD00F7907
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/DefaultRoute
  geocloudlighthouseservervpcingressSubnet2EIP027ADC34:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/EIP
  geocloudlighthouseservervpcingressSubnet2NATGateway3B7A9A5B:
    Type: AWS::EC2::NatGateway
    Properties:
      SubnetId:
        Ref: geocloudlighthouseservervpcingressSubnet2Subnet681FDBB8
      AllocationId:
        Fn::GetAtt:
          - geocloudlighthouseservervpcingressSubnet2EIP027ADC34
          - AllocationId
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/ingressSubnet2/NATGateway
  geocloudlighthouseservervpccomputeSubnet1Subnet27B9E2F7:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ""
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: compute
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1/Subnet
  geocloudlighthouseservervpccomputeSubnet1RouteTable31A7A01C:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1/RouteTable
  geocloudlighthouseservervpccomputeSubnet1RouteTableAssociation7735FB99:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpccomputeSubnet1RouteTable31A7A01C
      SubnetId:
        Ref: geocloudlighthouseservervpccomputeSubnet1Subnet27B9E2F7
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1/RouteTableAssociation
  geocloudlighthouseservervpccomputeSubnet1DefaultRoute694C26F9:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpccomputeSubnet1RouteTable31A7A01C
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: geocloudlighthouseservervpcingressSubnet1NATGatewayAF099418
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet1/DefaultRoute
  geocloudlighthouseservervpccomputeSubnet2Subnet56CA6FFC:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ""
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: compute
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2/Subnet
  geocloudlighthouseservervpccomputeSubnet2RouteTable69A37481:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2/RouteTable
  geocloudlighthouseservervpccomputeSubnet2RouteTableAssociationDD783DF2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpccomputeSubnet2RouteTable69A37481
      SubnetId:
        Ref: geocloudlighthouseservervpccomputeSubnet2Subnet56CA6FFC
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2/RouteTableAssociation
  geocloudlighthouseservervpccomputeSubnet2DefaultRoute66A4E1E1:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: geocloudlighthouseservervpccomputeSubnet2RouteTable69A37481
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: geocloudlighthouseservervpcingressSubnet2NATGateway3B7A9A5B
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/computeSubnet2/DefaultRoute
  geocloudlighthouseservervpcIGW79583064:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/IGW
  geocloudlighthouseservervpcVPCGWD00F7907:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
      InternetGatewayId:
        Ref: geocloudlighthouseservervpcIGW79583064
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server--vpc/VPCGW
  geocloudlighthouseserverdatabasesecret8A2B2D30:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Generated by the CDK for stack: "
            - Ref: AWS::StackName
      GenerateSecretString:
        ExcludeCharacters: " %+~`#$&*()|[]{}:;<>?!'/@\"\\"
        GenerateStringKey: password
        PasswordLength: 30
        SecretStringTemplate: '{"username":"lh_user"}'
      Name: geo-cloud-lighthouse-server-database-credentials
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database-secret/Resource
  geocloudlighthouseserverdatabasesecretAttachmentADCD192F:
    Type: AWS::SecretsManager::SecretTargetAttachment
    Properties:
      SecretId:
        Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
      TargetId:
        Ref: geocloudlighthouseserverdatabase9B69BBD1
      TargetType: AWS::RDS::DBInstance
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database-secret/Attachment/Resource
  geocloudlighthouseserverdatabaseSubnetGroup8CCD3335:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for geo-cloud-lighthouse-server-database database
      SubnetIds:
        - Ref: geocloudlighthouseservervpcingressSubnet1SubnetFB9487B3
        - Ref: geocloudlighthouseservervpcingressSubnet2Subnet681FDBB8
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database/SubnetGroup/Default
  geocloudlighthouseserverdatabaseSecurityGroup6F5AAD98:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security group for geo-cloud-lighthouse-server-database database
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database/SecurityGroup/Resource
  geocloudlighthouseserverdatabaseSecurityGroupfromgeocloudlighthouseservergeocloudlighthouseserverlambdaSecurityGroup6C1C2485IndirectPort9862A7D0:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: from geocloudlighthouseservergeocloudlighthouseserverlambdaSecurityGroup6C1C2485:{IndirectPort}
      FromPort:
        Fn::GetAtt:
          - geocloudlighthouseserverdatabase9B69BBD1
          - Endpoint.Port
      GroupId:
        Fn::GetAtt:
          - geocloudlighthouseserverdatabaseSecurityGroup6F5AAD98
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - geocloudlighthouseserverlambdaSecurityGroup351C7F22
          - GroupId
      ToPort:
        Fn::GetAtt:
          - geocloudlighthouseserverdatabase9B69BBD1
          - Endpoint.Port
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database/SecurityGroup/from geocloudlighthouseservergeocloudlighthouseserverlambdaSecurityGroup6C1C2485:{IndirectPort}
  geocloudlighthouseserverdatabase9B69BBD1:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.micro
      AllocatedStorage: "30"
      CopyTagsToSnapshot: true
      DBInstanceIdentifier: geo-cloud-lighthouse-server-db-server
      DBName: geo_cloud_lighthouse_server_db
      DBSubnetGroupName:
        Ref: geocloudlighthouseserverdatabaseSubnetGroup8CCD3335
      DeletionProtection: true
      Engine: postgres
      EngineVersion: "14.2"
      MasterUsername:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
            - :SecretString:username::}}
      MasterUserPassword:
        Fn::Join:
          - ""
          - - "{{resolve:secretsmanager:"
            - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
            - :SecretString:password::}}
      PreferredBackupWindow: 02:00-03:00
      PreferredMaintenanceWindow: Sun:03:00-Sun:04:00
      PubliclyAccessible: true
      StorageEncrypted: true
      StorageType: gp2
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
      VPCSecurityGroups:
        - Fn::GetAtt:
            - geocloudlighthouseserverdatabaseSecurityGroup6F5AAD98
            - GroupId
    UpdateReplacePolicy: Snapshot
    DeletionPolicy: Snapshot
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-database/Resource
  geocloudlighthouseserverlambdaServiceRole8080D387:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-lambda/ServiceRole/Resource
  geocloudlighthouseserverlambdaServiceRoleDefaultPolicyDFF17996:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
        Version: "2012-10-17"
      PolicyName: geocloudlighthouseserverlambdaServiceRoleDefaultPolicyDFF17996
      Roles:
        - Ref: geocloudlighthouseserverlambdaServiceRole8080D387
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-lambda/ServiceRole/DefaultPolicy/Resource
  geocloudlighthouseserverlambdaSecurityGroup351C7F22:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatic security group for Lambda Function geocloudlighthouseservergeocloudlighthouseserverlambda564250D9
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
      VpcId:
        Ref: geocloudlighthouseservervpc47BD1A05
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-lambda/SecurityGroup/Resource
  geocloudlighthouseserverlambdaF6ED33AC:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ImageUri:
          Fn::Sub: ${AWS::AccountId}.dkr.ecr.us-east-1.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-us-east-1:c9b81be4728655f328f37d8063ad2116e55959586ac53ab5173e8713ed667403
      Role:
        Fn::GetAtt:
          - geocloudlighthouseserverlambdaServiceRole8080D387
          - Arn
      Environment:
        Variables:
          SECRET_NAME:
            Fn::Join:
              - "-"
              - - Fn::Select:
                    - 0
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
                - Fn::Select:
                    - 1
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
                - Fn::Select:
                    - 2
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
                - Fn::Select:
                    - 3
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
                - Fn::Select:
                    - 4
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
                - Fn::Select:
                    - 5
                    - Fn::Split:
                        - "-"
                        - Fn::Select:
                            - 6
                            - Fn::Split:
                                - ":"
                                - Ref: geocloudlighthouseserverdatabasesecret8A2B2D30
      MemorySize: 512
      PackageType: Image
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
      Timeout: 15
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - geocloudlighthouseserverlambdaSecurityGroup351C7F22
              - GroupId
        SubnetIds:
          - Ref: geocloudlighthouseservervpccomputeSubnet1Subnet27B9E2F7
          - Ref: geocloudlighthouseservervpccomputeSubnet2Subnet56CA6FFC
    DependsOn:
      - geocloudlighthouseserverlambdaServiceRoleDefaultPolicyDFF17996
      - geocloudlighthouseserverlambdaServiceRole8080D387
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-lambda/Resource
      aws:asset:path: asset.c9b81be4728655f328f37d8063ad2116e55959586ac53ab5173e8713ed667403
      aws:asset:dockerfile-path: Dockerfile
      aws:asset:property: Code.ImageUri
  geocloudlighthouseserverlambdaLogRetentionDB3A34E7:
    Type: Custom::LogRetention
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A
          - Arn
      LogGroupName:
        Fn::Join:
          - ""
          - - /aws/lambda/
            - Ref: geocloudlighthouseserverlambdaF6ED33AC
      RetentionInDays: 30
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-lambda/LogRetention/Resource
  LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/ServiceRole/Resource
  LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - logs:DeleteRetentionPolicy
              - logs:PutRetentionPolicy
            Effect: Allow
            Resource: "*"
        Version: "2012-10-17"
      PolicyName: LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB
      Roles:
        - Ref: LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/ServiceRole/DefaultPolicy/Resource
  LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aFD4BFC8A:
    Type: AWS::Lambda::Function
    Properties:
      Handler: index.handler
      Runtime: nodejs14.x
      Code:
        S3Bucket:
          Fn::Sub: cdk-hnb659fds-assets-${AWS::AccountId}-us-east-1
        S3Key: ae967c277459e8936ac565a71d34ea5dcff7b98e556466c36a4d6da023a2d9aa.zip
      Role:
        Fn::GetAtt:
          - LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB
          - Arn
      Tags:
        - Key: ProductName
          Value: Lighthouse Server
        - Key: Team
          Value: Geo Cloud
    DependsOn:
      - LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRoleDefaultPolicyADDA7DEB
      - LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8aServiceRole9741ECFB
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/LogRetentionaae0aa3c5b4d4f87b02d85b201efdd8a/Resource
      aws:asset:path: asset.ae967c277459e8936ac565a71d34ea5dcff7b98e556466c36a4d6da023a2d9aa
      aws:asset:is-bundled: false
      aws:asset:property: Code
  geocloudlighthouseserverapigatewayAA38BB4F:
    Type: AWS::ApiGatewayV2::Api
    Properties:
      Name: geo-cloud-lighthouse-server-api-gateway
      ProtocolType: HTTP
      Tags:
        ProductName: Lighthouse Server
        Team: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-api-gateway/Resource
  geocloudlighthouseserverapigatewayDefaultRoutegeocloudlighthouseserverapigatewaylambdaintegration4A1F83A1:
    Type: AWS::ApiGatewayV2::Integration
    Properties:
      ApiId:
        Ref: geocloudlighthouseserverapigatewayAA38BB4F
      IntegrationType: AWS_PROXY
      IntegrationUri:
        Fn::GetAtt:
          - geocloudlighthouseserverlambdaF6ED33AC
          - Arn
      PayloadFormatVersion: "2.0"
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-api-gateway/DefaultRoute/geo-cloud-lighthouse-server-api-gateway-lambda-integration/Resource
  geocloudlighthouseserverapigatewayDefaultRoutegeocloudlighthouseserverapigatewaylambdaintegrationPermission2DA2C990:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Fn::GetAtt:
          - geocloudlighthouseserverlambdaF6ED33AC
          - Arn
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:"
            - Ref: AWS::Partition
            - ":execute-api:us-east-1:"
            - Ref: AWS::AccountId
            - ":"
            - Ref: geocloudlighthouseserverapigatewayAA38BB4F
            - /*/*
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-api-gateway/DefaultRoute/geo-cloud-lighthouse-server-api-gateway-lambda-integration-Permission
  geocloudlighthouseserverapigatewayDefaultRouteAFB1DA29:
    Type: AWS::ApiGatewayV2::Route
    Properties:
      ApiId:
        Ref: geocloudlighthouseserverapigatewayAA38BB4F
      RouteKey: $default
      AuthorizationType: NONE
      Target:
        Fn::Join:
          - ""
          - - integrations/
            - Ref: geocloudlighthouseserverapigatewayDefaultRoutegeocloudlighthouseserverapigatewaylambdaintegration4A1F83A1
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-api-gateway/DefaultRoute/Resource
  geocloudlighthouseserverapigatewayDefaultStageC55D0780:
    Type: AWS::ApiGatewayV2::Stage
    Properties:
      ApiId:
        Ref: geocloudlighthouseserverapigatewayAA38BB4F
      StageName: $default
      AutoDeploy: true
      Tags:
        ProductName: Lighthouse Server
        Team: Geo Cloud
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/geo-cloud-lighthouse-server-api-gateway/DefaultStage/Resource
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAA/31SwW7bMAz9ltwVtU4uOy5pu87AsBlO0WtBK5yrxpYMUUoRGP73UlacGC3QE5+enh+fSa3kOpN9toB3Wqr9YdnoSvY7D+ogmHrpUa1k/9wpcfffPBd3oghVo9UuVAZ95K6otMHjE1QNXvkrtyGySoPX1lzEETzkRSx/wT+Cx3c4icLpI8OrcW48OsaTICU5nzaes762aLzYoQpO+9Ojs6EbM3xL5KZ2SDQItyfZ34OHCghZ4rjtdMwNeTAKRYpzcbrffiEm6SBo9KAWDNToZJ86R9tUnsDV6GfJL4LPN4NooK32wPmsOqDLW3b8FYya5jjHBbpWE/FpEBpa2Zc27WKsheW9jcNLaBDc8QWIOKmcuW8iE+9kiZ0l7a07bXkSorE1yT+2LtFzstiT1tP36SNay21gIz/qodN12tFxNc5g0+lpnbX7+hL40dU4DKJEssHxyEfTyG [...]
    Metadata:
      aws:cdk:path: geo-cloud-lighthouse-server/CDKMetadata/Default
Outputs:
  APIGatewayURL:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: geocloudlighthouseserverapigatewayAA38BB4F
          - .execute-api.us-east-1.
          - Ref: AWS::URLSuffix
          - /
Parameters:
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Rules:
  CheckBootstrapVersion:
    Assertions:
      - Assert:
          Fn::Not:
            - Fn::Contains:
                - - "1"
                  - "2"
                  - "3"
                  - "4"
                  - "5"
                - Ref: BootstrapVersion
        AssertDescription: CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.
